--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "models"]
 	path = models
-	url = git@github.com:tensorflow/models.git
+	url = https://github.com/tensorflow/models.git
 	branch = r1.5
