--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>rs_tensorflow</name>
+  <name>robosub_object_detection</name>
   <version>1.0.0</version>
-  <description>The rs_tensorflow package</description>
+  <description>The robosub_object_detection package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
